(executable
 (name benchmark)
 (public_name benchmark)
 (libraries containers eio eio_main progress timer str)
 (preprocess (pps ppx_deriving.std))
 (promote (until-clean) (into ".."))
 (modules benchmark excel)
)

(executable
 (name wtime)
 (public_name wtime)
 (libraries core_unix timer unix)
 (promote (until-clean) (into ".."))
 (modules wtime)
)

(env (dev (flags (:standard -warn-error -A))))
