(library
 (name runner_lib)
 (libraries containers eio timer yojson unix zip)
 (preprocess (pps ppx_deriving.std))
 (modules common protocol excel protocol_limits)
)

(executable
 (name benchmark)
 (public_name benchmark)
 (libraries containers eio eio_main progress terminal unix runner_lib)
 (promote (until-clean) (into ".."))
 (modules benchmark)
)

(executable
 (name benchmark_server)
 (public_name benchmark-server)
 (libraries eio eio_main runner_lib)
 (promote (until-clean) (into ".."))
 (modules benchmark_server)
)

(executable
 (name wtime)
 (public_name wtime)
 (libraries core_unix timer unix)
 (promote (until-clean) (into ".."))
 (modules wtime)
)

(env (dev (flags (:standard -warn-error -A))))
